kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: muchtodo
  labels:
    name: muchtodo
